k8s/base/blog-cms/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-cms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-cms
  template:
    metadata:
      labels:
        app: blog-cms
    spec:
      containers:
        - name: blog-cms
          image: docker.io/curator/frontend/blog-cms:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "512Mi"
            limits:
              memory: "1Gi"
