k8s/base/blog-cms/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-cms
spec:
  ports:
    - port: 3000
  selector:
    app: blog-cms
